# videoslides

./: .gitignore  LICENSE  README.md  TODO.txt  config.toml  example-config.toml  pdfs_to_pngs.py  pngs_to_mp4.py  presentslides.py  pyproject.toml  shared.py  split_pdf.py  videoslides.py  webslides.py
