[project]
name = "videoslides"
version = "0.1.0"
description = "Convert PDF presentations to video with configurable slide order and durations"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "PyPDF2>=3.0.0",
    "pdf2image>=1.17.0",
    "Pillow>=10.0.0",
    "moviepy>=1.0.3",
]

[project.scripts]
videoslides = "videoslides:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = []