[project]
name = "videoslides"
version = "0.1.0"
description = "Convert PDF presentations to video with configurable slide order and durations"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "PyMuPDF>=1.23.0",
    "moviepy>=1.0.3",
    "pygame>=2.5.0",
]

[project.scripts]
videoslides = "videoslides:main"
presentslides = "presentslides:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = []